Add thumbnails to links

--- a/index.html
+++ b/index.html
@@ -17,15 +17,33 @@
         </div>
         <div class="links">
             <ul>
-                <li>
-                    <a href="#">Example Link</a>
-                </li>
-                <li>
-                    <a href="#">Example Link</a>
-                </li>
-                <li>
-                    <a href="#">Example Link</a>
-                </li>
+                <a href="#">
+                    <li>
+                        <img class="thumbnail" src="images/one.svg">
+                        <div class="link-text">
+                            <h2>Intro to Unity</h2>
+                            <p>What is Unity? Find out here.</p>
+                        </div>
+                    </li>
+                </a>
+                <a href="#">
+                    <li>
+                        <img class="thumbnail" src="images/two.svg">
+                        <div class="link-text">
+                            <h2>Start with this</h2>
+                            <p>Here are the videos we'll use.</p>
+                        </div>
+                    </li>
+                </a>
+                <a href="#">
+                    <li>
+                        <img class="thumbnail" src="images/three.svg">
+                        <div class="link-text">
+                            <h2>Shortcuts</h2>
+                            <p>Find a list of keyboard shortcuts here.</p>
+                        </div>
+                    </li>
+                </a>
             </ul>
         </div>
     </div>
