--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unity Guidebook</title>
     <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+    <script async defer src="main.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="welcome">
             <div class="headers">
-                <h1>Getting started with Unity 3D</h1>
-                <h3>A guide for our Gaming and Animation classes.</h3>
+                <h1 class="fancy-animate">Getting started with Unity 3D</h1>
+                <h3 class="fadeInUp">A guide for our Gaming and Animation classes. <img class="info" src="images/info.png"></h3>
+                <!-- Info Symbol Attribution: © 2014 Andreas Kainz &amp; Uri Herrera &amp; Andrew Lake &amp; Marco Martin &amp; Harald Sitter &amp; Jonathan Riddell &amp; Ken Vermette &amp; Aleix Pol &amp; David Faure &amp; Albert Vaca &amp; Luca Beltrame &amp; Gleb Popov &amp; Nuno Pinheiro &amp; Alex Richardson &amp;  Jan Grulich &amp; Bernhard Landauer &amp; Heiko Becker &amp; Volker Krause &amp; David Rosca &amp; Phil Schaf / KDE-->
             </div>
             <img class="img" src="/images/modeling.svg" alt="3D Modeling">
         </div>
-        <div class="links">
+        <div class="links stagger">
             <ul>
                 <a href="#">
                     <li>
@@ -30,7 +33,7 @@
                     <li>
                         <img class="thumbnail" src="images/two.svg">
                         <div class="link-text">
-                            <h2>Start with this</h2>
+                            <h2>Starting tutorials</h2>
                             <p>Here are the videos we'll use.</p>
                         </div>
                     </li>
@@ -39,12 +42,27 @@
                     <li>
                         <img class="thumbnail" src="images/three.svg">
                         <div class="link-text">
+                            <h2>Moving models</h2>
+                            <p>Go from 3DSMax to Unity.</p>
+                        </div>
+                    </li>
+                </a>
+                <a href="#">
+                    <li>
+                        <img class="thumbnail" src="images/four.svg">
+                        <div class="link-text">
                             <h2>Shortcuts</h2>
                             <p>Find a list of keyboard shortcuts here.</p>
                         </div>
                     </li>
                 </a>
             </ul>
+        </div>
+    </div>
+    <div class="modal">
+        <div class="modal-content">
+            <h3>Made by Dakshal P for NBTHS Gaming and Animation Classes</h3>
+            <div class="close-button">Ok</div>
         </div>
     </div>
 </body>
