edit modal styling

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
     <div class="modal">
         <div class="modal-content">
-            <h3>Made by Dakshal P for NBTHS Gaming and Animation Classes</h3>
+            <h4>Made by <strong>Dakshal P</strong> for <strong>NBTHS</strong> Gaming and Animation Classes</h4>
             <div class="close-button">Ok</div>
         </div>
     </div>
