--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     </div>
     <div class="modal">
         <div class="modal-content">
+            <img src="images/dev.png" style="width: 160px; height: 160px">
             <h4>Made by <strong>Dakshal P</strong> for <strong>NBTHS</strong> Gaming and Animation Classes</h4>
             <div class="close-button">Ok</div>
         </div>
