--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unity Guidebook</title>
     <link rel="stylesheet" href="app.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <script async defer src="main.js"></script>
 </head>
 <body>
@@ -20,7 +19,7 @@
         </div>
         <div class="links stagger">
             <ul>
-                <a href="#">
+                <a href="one.html">
                     <li>
                         <img class="thumbnail" src="images/one.svg">
                         <div class="link-text">
@@ -66,5 +65,7 @@
             <div class="close-button">Ok</div>
         </div>
     </div>
+    <div id="footer"></div>
+    <script defer src="headerfooter.js"></script>
 </body>
 </html>
