--- a/one.html
+++ b/one.html
@@ -9,6 +9,15 @@
 </head>
 <div id="header"></div>
 <body>
+    <div class="container">
+        <div class="welcome">
+            <div class="headers">
+                <h1 class="fancy-animate">Intro to Unity</h1>
+                <h3 class="fadeInUp">What is Unity? Find out here.</h3>
+            </div>
+            <img class="img" src="/images/one.svg" alt="Discovery of a game world">
+        </div>
+    </div>
     <div id="footer"></div>
     <script defer src="headerfooter.js"></script>
 </body>
