--- a/one.html
+++ b/one.html
@@ -13,17 +13,22 @@
         <div class="welcome">
             <div class="headers">
                 <h1 class="fancy-animate">Intro to Unity</h1>
-                <h3 class="fadeInUp">What is Unity? Find out here.</h3>
+                <h3 id="tagline">What is Unity? Find out here.</h3>
             </div>
             <img class="img" src="/images/one.svg" alt="Discovery of a game world">
         </div>
         <div class="main-content">
-            <h2>Definition</h2>
+            <h2>Basics</h2>
             <p>
                 Unity is a "gaming engine", a piece of software that lets you build and design video games.
-                It's used by professionals in the gaming industry to create some of the most well known games out there. Ever wanted to move and animate your 3Ds Max models? Now you can. It's time to make some games!
+                It's used by professionals in the gaming industry to create some of the most popular games out there. Ever wanted to move and animate your 3Ds Max models? Now you can. With Unity, you can make game worlds like real game developers do.
+                Scroll on to find out how.
             </p>
-            <img src="https://unity3d.com/files/images/ogimg.jpg">
+            <img style="filter:hue-rotate(90deg)" src="https://i.udemycdn.com/course/750x422/1210008_6859.jpg">
+            <h2>Getting started</h2>
+            <p>
+                To open up Unity on the computers in room 127, you can press the windows key and search for the program.
+            </p>
         </div>
     </div>
     <div id="footer"></div>
