make sidenav animate vertically

--- a/one.html
+++ b/one.html
@@ -15,7 +15,7 @@
                 <h1 class="fancy-animate">Intro to Unity</h1>
                 <h3 id="tagline">What is Unity? Find out here.</h3>
             </div>
-            <img class="img" src="/images/one.svg" alt="Discovery of a game world">
+            <img class="img" src="images/one.svg" alt="Discovery of a game world">
         </div>
         <div class="main-content">
             <h2>Basics</h2>
