--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h3 id="tagline">A guide for our Gaming and Animation classes.<img class="info trigger" src="images/info.png"></h3>
                 <!-- Info Symbol Attribution: © 2014 Andreas Kainz &amp; Uri Herrera &amp; Andrew Lake &amp; Marco Martin &amp; Harald Sitter &amp; Jonathan Riddell &amp; Ken Vermette &amp; Aleix Pol &amp; David Faure &amp; Albert Vaca &amp; Luca Beltrame &amp; Gleb Popov &amp; Nuno Pinheiro &amp; Alex Richardson &amp;  Jan Grulich &amp; Bernhard Landauer &amp; Heiko Becker &amp; Volker Krause &amp; David Rosca &amp; Phil Schaf / KDE-->
             </div>
-            <img class="img" src="/images/modeling.svg" alt="3D Modeling">
+            <img class="img" src="images/modeling.svg" alt="3D Modeling">
         </div>
         <div class="links stagger">
             <ul>
