edit intro page

--- a/one.html
+++ b/one.html
@@ -24,10 +24,14 @@
                 It's used by professionals in the gaming industry to create some of the most popular games out there. Ever wanted to move and animate your 3Ds Max models? Now you can. With Unity, you can make game worlds like real game developers do.
                 Scroll on to find out how.
             </p>
-            <img style="filter:hue-rotate(90deg)" src="https://i.udemycdn.com/course/750x422/1210008_6859.jpg">
+            <img style="padding: 10px" src="images/one/unity_logo.png">
             <h2>Getting started</h2>
             <p>
                 To open up Unity on the computers in room 127, you can press the windows key and search for the program.
+            </p>
+            <img src="images/one/unity_search.png" alt="Searching for Unity" class="medium">
+            <p>
+                Once you know how to open it up, you can move on to <a href="two.html">the video tutorials</a>.
             </p>
         </div>
     </div>
