add note to intro

--- a/one.html
+++ b/one.html
@@ -15,7 +15,7 @@
                 <h1 class="fancy-animate">Intro to Unity</h1>
                 <h3 id="tagline">What is Unity? Find out here.</h3>
             </div>
-            <img class="img" src="images/one.svg" alt="Discovery of a game world">
+            <img class="img" src="/images/one.svg" alt="Discovery of a game world">
         </div>
         <div class="main-content">
             <h2>Basics</h2>
@@ -33,6 +33,15 @@
             <p>
                 Once you know how to open it up, you can move on to <a href="two.html">the video tutorials</a>.
             </p>
+            <div class="note">
+                <h2>Side Note</h2>
+                <p>
+                    In this course, you will be using <strong>3Ds Max</strong> to make 
+                    3D models, <strong>Unity</strong> to design your games, 
+                    and a program called <strong>VS Code</strong> to add simple code to your games to make them work. 
+                    The tutorial will explain more, but in it they use Visual Studio rather than VS Code.
+                </p>
+            </div>
         </div>
     </div>
     <div id="footer"></div>
