undo page organization change

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </div>
                     </li>
                 </a>
-                <a href="#">
+                <a href="pages/four.html">
                     <li>
                         <img class="thumbnail" src="images/four.svg">
                         <div class="link-text">
