edit main page navigation

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="links stagger">
             <ul>
-                <a href="pages/one.html">
+                <a href="one.html">
                     <li>
                         <img class="thumbnail" src="images/one.svg">
                         <div class="link-text">
