edit list styling

--- a/four.html
+++ b/four.html
@@ -17,7 +17,7 @@
             </div>
             <img class="img" src="../images/four.svg" alt="Shorcut pages">
         </div>
-          <div class="list">
+          <div class="list inset">
             <div class="list-heading">
                 <h2>Movement Shortcuts</h2>
             </div>
@@ -43,7 +43,7 @@
                   </li>
               </ul>
           </div>
-          <div class="list">
+          <div class="list inset">
                 <div class="list-heading">
                     <h2>Editing Shorcuts</h2>
                     <p>To use with a selected object</p>
