add tutorial page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         </div>
                     </li>
                 </a>
-                <a href="#">
+                <a href="two.html">
                     <li>
                         <img class="thumbnail" src="images/two.svg">
                         <div class="list-text">
