add tutorial to install unity

--- a/two.html
+++ b/two.html
@@ -24,12 +24,24 @@
             <div class="list links">
                 <ul>
                     <a href="https://www.youtube.com/watch?v=j48LtUkZRjU&list=PLPV2KyIb3jR53Jce9hP7G5xC4O9AgnOuL&index=1">
-                            <li>
-                                    <img class="thumbnail" src="https://i.ytimg.com/vi/j48LtUkZRjU/hqdefault.jpg?sqp=-oaymwEYCKgBEF5IVfKriqkDCwgBFQAAiEIYAXAB&rs=AOn4CLA4TuJZrHo2ZnyPHN-zcWbYJTZcYQ">
+                            <li>     
+                                <img class="thumbnail" src="https://i.ytimg.com/vi/j48LtUkZRjU/hqdefault.jpg?sqp=-oaymwEYCKgBEF5IVfKriqkDCwgBFQAAiEIYAXAB&rs=AOn4CLA4TuJZrHo2ZnyPHN-zcWbYJTZcYQ">
+                                <div class="list-text">
+                                    <h2>Getting started</h2>
+                                </div>
                             </li>
                     </a>
-                </ul>
+                    <a href="https://www.youtube.com/watch?v=IlKaB1etrik&list=PLPV2KyIb3jR53Jce9hP7G5xC4O9AgnOuL&index=2">
+                        <li>     
+                            <div class="list-text">
+                                <h3>Full playlist</h3>
+                            </div>
+                        </li>
+                    </a>
             </div>
+        <div class="main-content">
+            <p>Note: the second video is the start of the tutorials. It also shows you how to install Unity, which you can skip. If you don't already have Unity this <a href="installUnity.html">unity installation guide</a> may be more helpful than what is shown in the video.</p>
+        </div>
     </div>
     <div id="footer"></div>
     <script defer src="headerfooter.js"></script>
