add vs code install guide

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <img class="thumbnail" src="images/four.svg">
                         <div class="list-text">
                             <h2>Shortcuts</h2>
-                            <p>Find a list of keyboard shortcuts here.</p>
+                            <p>Keyboard shortcuts can make your life easier.</p>
                         </div>
                     </li>
                 </a>
