--- a/installUnity.html
+++ b/installUnity.html
@@ -33,11 +33,18 @@
             <img class="medium" src="images/install_guide/hub_run_2.png">
             <p>After that, it will ask you to select a template or "microgame", a.k.a a starting project. We'll click Empty 3D since we are going to use a tutorial to make our game from scratch.</p>
             <img class="medium" src="images/install_guide/hub_run_3.png">
+            
 
-            <h3><br> After that hit <strong>Launch unity</strong> to get started. When you're ready, you can move on to <a href="two.html">the video tutorials</a>.</h3>
+            <h3><br><br> After that hit <strong>Launch unity</strong> to get started. If you haven't already, <a href="installVsCode.html">Install Vs Code</a>. When you're ready, you can move on to <a href="two.html">the video tutorials</a>.</h3>
 
-            <p><br>If you get stuck at any time and have to close the Unity Hub, you can always just open up Unity and make a new project with it (after it has installed).</p>
+            <p><br><br></p>
+            <hr>
+            <p><br><br>If you get stuck at any time and have to close the Unity Hub, you can always just open up Unity and make a new project with it (after it has installed).</p>
             <img src="images/install_guide/unity_open_new.png">
+            <p><br> Here are some more resources if you get stuck installing Unity: </p>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=KMuMhA6Lk0I&t=465s">Youtube Tutorial on How to Install Unity</a></li>
+            </ul>
         </div>
     </div>
     <div id="footer"></div>
