--- a/one.html
+++ b/one.html
@@ -36,7 +36,7 @@
                     </ul>
                     <li><strong>Vs Code - A Code Editor</strong></li>
                     <ul>
-                        <li><a href="https://code.visualstudio.com/download">Install Vs Code</a></li>
+                        <li><a href="installVsCode.html">Install Vs Code</a></li>
                     </ul>
                 </ul>
                 After you're done installing both, move on to <a href="two.html">the video tutorials</a>
