--- a/two.html
+++ b/two.html
@@ -23,7 +23,7 @@
         </div>
             <div class="list links">
                 <ul>
-                    <a href="https://www.youtube.com/watch?v=j48LtUkZRjU&list=PLPV2KyIb3jR53Jce9hP7G5xC4O9AgnOuL&index=1">
+                    <a target="_blank" href="https://www.youtube.com/watch?v=j48LtUkZRjU&list=PLPV2KyIb3jR53Jce9hP7G5xC4O9AgnOuL&index=1">
                             <li>     
                                 <img class="thumbnail" src="https://i.ytimg.com/vi/j48LtUkZRjU/hqdefault.jpg?sqp=-oaymwEYCKgBEF5IVfKriqkDCwgBFQAAiEIYAXAB&rs=AOn4CLA4TuJZrHo2ZnyPHN-zcWbYJTZcYQ">
                                 <div class="list-text">
@@ -31,7 +31,7 @@
                                 </div>
                             </li>
                     </a>
-                    <a href="https://www.youtube.com/watch?v=IlKaB1etrik&list=PLPV2KyIb3jR53Jce9hP7G5xC4O9AgnOuL&index=2">
+                    <a target="_blank" href="https://www.youtube.com/watch?v=IlKaB1etrik&list=PLPV2KyIb3jR53Jce9hP7G5xC4O9AgnOuL&index=2">
                         <li>     
                             <div class="list-text">
                                 <h3>Full playlist</h3>
