edit shortcuts page

--- a/four.html
+++ b/four.html
@@ -74,7 +74,7 @@
                         </div>
                       </li>
                       <li>
-                        <h1>T</h1>
+                        <h1 style="color:gray;">T</h1>
                         <div class="list-text">
                             <h3>(Resize and move on a 2D Plane)</h3>
                             <p>Not as important in 3D editing</p>
