--- a/four.html
+++ b/four.html
@@ -13,7 +13,7 @@
         <div class="welcome">
             <div class="headers">
                 <h1 class="fancy-animate">Shortcuts</h1>
-                <h3 id="tagline">Keyboard shortcuts can make your life easier.</h3>
+                <h3 id="tagline">Keyboard shortcuts make your life easier.</h3>
             </div>
             <img class="img" src="../images/four.svg" alt="Shorcut pages">
         </div>
