create moving models page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </div>
                     </li>
                 </a>
-                <a href="#">
+                <a href="three.html">
                     <li>
                         <img class="thumbnail" src="images/three.svg">
                         <div class="list-text">
