fix resource not found errors

--- a/four.html
+++ b/four.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unity Guidebook</title>
-    <link rel="stylesheet" href="../app.css">
-    <script async defer src="../main.js"></script>
+    <link rel="stylesheet" href="app.css">
+    <script async defer src="main.js"></script>
 </head>
 <div id="header"></div>
 <body>
@@ -15,7 +15,7 @@
                 <h1 class="fancy-animate">Shortcuts</h1>
                 <h3 id="tagline">Keyboard shortcuts make your life easier.</h3>
             </div>
-            <img class="img" src="../images/four.svg" alt="Shorcut pages">
+            <img class="img" src="images/four.svg" alt="Shorcut pages">
         </div>
           <div class="list inset">
             <div class="list-heading">
@@ -84,5 +84,5 @@
               </div>
     </div>
     <div id="footer"></div>
-    <script defer src="../headerfooter.js"></script>
+    <script defer src="headerfooter.js"></script>
 </body>
