--- a/three.html
+++ b/three.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unity Guidebook</title>
-    <link rel="stylesheet" href="../app.css">
-    <script async defer src="../main.js"></script>
+    <link rel="stylesheet" href="app.css">
+    <script async defer src="main.js"></script>
 </head>
 <div id="header"></div>
 <body>
@@ -15,7 +15,7 @@
                 <h1 class="fancy-animate">Moving models</h1>
                 <h3 id="tagline">Go from 3DSMax to Unity.</h3>
             </div>
-            <img class="img" src="../images/three.svg" alt="Shorcut pages">
+            <img class="img" src="images/three.svg" alt="Shorcut pages">
         </div>
         <div class="main-content">
             <h2>This page is a work in progress.</h2>
@@ -30,5 +30,5 @@
         </div>
     </div>
     <div id="footer"></div>
-    <script defer src="../headerfooter.js"></script>
+    <script defer src="headerfooter.js"></script>
 </body>
