--- a/installVsCode.html
+++ b/installVsCode.html
@@ -6,6 +6,7 @@
     <title>How to Install Vs Code</title>
     <link rel="stylesheet" href="app.css">
     <script async defer src="main.js"></script>
+    <link rel="icon" href="images/favicon.svg" type="image/x-icon">
 </head>
 <div id="header"></div>
 <body>
