--- a/installUnity.html
+++ b/installUnity.html
@@ -6,6 +6,7 @@
     <title>How to Install Unity</title>
     <link rel="stylesheet" href="app.css">
     <script async defer src="main.js"></script>
+    <link rel="icon" href="images/favicon.svg" type="image/x-icon">
 </head>
 <div id="header"></div>
 <body>
