create seperation between sections in the intro page, for clarity

--- a/one.html
+++ b/one.html
@@ -43,7 +43,7 @@
                 After you're done installing both, move on to <a href="two.html">the video tutorials</a>
             </p>
             <!-- In school -->
-            <h2>Getting Started (In School)</h2>
+            <h2><br>Getting Started (In School)</h2>
             <p>
                 To open up Unity on the computers in room 127, you can press the windows key and search for the program.
             </p>
