add line break in intro page

--- a/one.html
+++ b/one.html
@@ -40,7 +40,7 @@
                         <li><a href="installVsCode.html">Install Vs Code</a></li>
                     </ul>
                 </ul>
-                After you're done installing both, move on to <a href="two.html">the video tutorials</a>
+                <br>After you're done installing both, move on to <a href="two.html">the video tutorials</a>
             </p>
             <!-- In school -->
             <h2><br>Getting Started (In School)</h2>
