--- a/installUnity.html
+++ b/installUnity.html
@@ -40,12 +40,15 @@
 
             <p><br><br></p>
             <hr>
-            <p><br><br>If you get stuck at any time and have to close the Unity Hub, you can always just open up Unity and make a new project with it (after it has installed).</p>
-            <img src="images/install_guide/unity_open_new.png">
-            <p><br> Here are some more resources if you get stuck installing Unity: </p>
-            <ul>
+            <div class="note">
+                <h3>Sidenote</h3>
+                <p><br>If you get stuck at any time and have to close the Unity Hub, you can always just open up Unity and make a new project with it (after it has installed).</p>
+                <img src="images/install_guide/unity_open_new.png">
+                <p><br> Here are some more resources if you get stuck installing Unity: </p>
+                <ul>
                 <li><a href="https://www.youtube.com/watch?v=KMuMhA6Lk0I&t=465s">Youtube Tutorial on How to Install Unity</a></li>
-            </ul>
+                </ul>
+            </div>
         </div>
     </div>
     <div id="footer"></div>
